# passphrase-py

./: .coveragerc  .gitignore  .travis.yml  DEVELOPERS.md  MANIFEST.in  MANIFEST.rst  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
changelog.d/: 20210312_121148_hackan.rst
man/: passphrase.1  passphrase.md
passphrase/: __init__.py  __main__.py  aux.py  calc.py  passphrase.py  random.py  secrets.py  settings.py  wordlist.json  wordlist.py
passphrase/tests/: constants.py  test_random.py  tests_aux.py  tests_bin.py  tests_calc.py  tests_main.py  tests_module.py  tests_passphrase.py  tests_random.py  tests_secrets.py
src/: make-words.py  passphrase.py
