[tool.poetry]
name = "hc-passphrase"
version = "1.2.1"
description = "Generates cryptographically secure passphrases and passwords"
authors = ["HacKan <hackan@gmail.com>"]
license = "GPLv3+"
readme = "README.md"
repository = "https://github.com/hackancuba/passphrase-py"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = "cryptography passphrase password security"
packages = [
    { include = "passphrase" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.8"
flake8-rst-docstrings = "^0"
flake8-import-order = "^0"
flake8-blind-except = "^0"
flake8-builtins = "^1.4.1"
flake8-logging-format = "^0"
flake8-docstrings = "^1.4.0"
flake8-quotes = "^3.0.0"
flake8-debugger = "^4.0.0"
flake8-bugbear = "^20.1.2"
flake8-comprehensions = "^3.1.4"
flake8-bandit = "^2.1.1"
flake8-commas = "^2.0.0"
flake8-eradicate = "^1.0.0"
flake8-broken-line = "^0"
flake8-string-format = "^0"
flake8-executable = "^2.0.3"
pep8-naming = "^0"
pydocstyle = "^5.0.2"
bandit = "^1.6.2"
invoke = "^1.3.0"
coverage = "^5.0.2"
radon = "^4.1.0"
dlint = "^0"
pytest = "^6.0.2"
pytest-watch = "^4.2.0"
pytest-cov = "^2.10.1"
pytest-asyncio = "^0"
pytest-custom_exit_code = "^0"
yapf = "^0"
add-trailing-comma = "^2.0.1"
safety = "^1.9.0"
mypy = "^0"
scriv = "^0"
flake8-2020 = "^1.6.0"
flake8-annotations-complexity = "^0"

[tool.poetry.scripts]
passphrase = "passphrase.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
